--- a/css/responsiv.css
+++ b/css/responsiv.css
@@ -6,18 +6,24 @@
   .navigation .navbar__nav a {
     display: none;
   }
+  .extra__navirgation .extra__navbar {
+    width: 100%;
+  }
   .extra__navirgation .extra__navbar a {
     margin-left: 1.3rem;
   }
   .header {
     background-image: none;
-    height: 57vh;
+    height: 65vh;
   }
   .header .banner {
     width: 100%;
   }
   .header .banner p {
     width: 90%;
+  }
+  .header .banner button {
+    margin-top: 1rem;
   }
   .about .about__content {
     grid-template-columns: 1fr;
@@ -28,16 +34,27 @@
   .filter__contact, .offers__content, .choose .choose__contact, .costuer__contact {
     grid-template-columns: 1fr;
   }
+  .costumer {
+    margin: 0 auto;
+  }
   .costumer .swiper-button-prev, .costumer .swiper-button-next {
     margin-top: 2rem;
   }
   .costuer__contact {
     width: 90%;
+    margin: 0 auto;
   }
   .costuer__contact .item {
     margin-top: 4rem;
+    margin: 0 auto;
+    height: 65vh;
+    margin-top: 5rem;
   }
   .costuer__contact .item .card {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .costuer__contact .item .card .img {
     width: 100%;
   }
   .contact__content form button {
