--- a/css/responsiv.css
+++ b/css/responsiv.css
@@ -1,10 +1,15 @@
 @media only screen and (max-width: 769px) {
+  .navigation {
+    height: 60vh;
+  }
   .navigation i {
-    display: inline;
-    margin-left: 14rem;
+    display: block;
+    position: absolute;
+    right: 30px;
+    top: 30px;
   }
   .navigation .navbar__nav a {
-    display: none;
+    display: block;
   }
   .extra__navirgation .extra__navbar {
     width: 100%;
@@ -62,5 +67,12 @@
   }
   .footer .footer__contact {
     grid-template-columns: 1fr;
+  }
+  .long {
+    height: 7vh;
+  }
+  .short {
+    height: 100%;
+    padding-bottom: 2rem;
   }
 }/*# sourceMappingURL=responsiv.css.map */
