--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,27 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  text-transform: capitalize;
+@import url("https://fonts.googleapis.com/css2?family=Barriecito&family=Dosis:wght@200;300;400&family=Inter&family=Lato:ital,wght@0,300;1,300&family=Lora:ital,wght@0,500;1,500&family=Montserrat:ital@0;1&family=Playfair+Display:ital,wght@0,600;1,500&family=Roboto:ital@0;1&display=swap");
+:root {
+  --barbi: "Barriecito", cursive;
+  --dosis: "Dosis", sans-serif;
+  --inter: "Inter", sans-serif;
+  --lato: "Lato", sans-serif;
+  --lora: "Lora", serif;
+  --monster: "Montserrat", sans-serif;
+  --playfair: "Playfair Display", serif;
+  --roboto: "Roboto", sans-serif;
 }
 
-.container {
-  max-width: 80%;
-  margin: 0 auto;
+p {
+  font-family: var(--lato);
 }
 
-body {
-  line-height: 1.5;
+h2 {
+  font-family: var(--inter);
 }
 
 .navigation {
   width: 100%;
   height: 9vh;
-  background-color: black;
-}
-.navigation i {
-  color: white;
-  font-size: 1.5rem;
-  display: none;
+  background-color: #000;
 }
 .navigation .navbar {
   display: flex;
@@ -32,31 +30,33 @@ body {
   align-items: center;
 }
 .navigation .navbar .navbar__nav a {
-  margin-left: 20px;
+  margin-left: 15px;
   font-size: 1.2rem;
+  font-family: var(--monster);
   color: white;
   transition: all 0.5s linear;
-  cursor: progress;
+  cursor: pointer;
 }
 .navigation .navbar .navbar__nav a:hover {
-  color: rgb(255, 179, 0);
+  color: rgb(235, 137, 9);
 }
 
-.extra__navirgation {
+.extra__navigation {
   background-color: #fe5b29;
   width: 100%;
   height: 7vh;
 }
-.extra__navirgation .extra__navbar {
+.extra__navigation .extra__navbar {
   width: 70%;
   height: 7vh;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
 }
-.extra__navirgation .extra__navbar a {
+.extra__navigation .extra__navbar a {
   color: white;
+  font-family: var(--inter);
 }
 
 .header {
@@ -71,9 +71,11 @@ body {
 }
 .header .banner h1:first-of-type {
   font-size: 3rem;
+  font-family: var(--lora);
 }
 .header .banner h1:last-of-type {
   font-size: 3rem;
+  font-family: var(--lora);
   color: #fe5b29;
 }
 .header .banner p {
@@ -83,9 +85,12 @@ body {
 .header .banner button:first-of-type {
   font-size: 1.3rem;
   padding: 5px 25px;
+  font-family: var(--barbi);
   color: white;
-  transition: 0.5s linear;
+  transition: all 0.5s linear;
   background-color: #fe5b29;
+  border: 0;
+  outline: 0;
 }
 .header .banner button:first-of-type:hover {
   background-color: black;
@@ -93,9 +98,12 @@ body {
 .header .banner button:last-of-type {
   font-size: 1.3rem;
   padding: 5px 25px;
+  font-family: var(--barbi);
   color: white;
-  transition: 0.5s linear;
-  background-color: black;
+  transition: all 0.5s linear;
+  background-color: #000;
+  border: 0;
+  outline: 0;
 }
 .header .banner button:last-of-type:hover {
   background-color: black;
@@ -114,9 +122,10 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
-  align-items: center;
+  align-items: flex-start;
 }
 .about__content .item h2 {
+  font-family: var(--dosis);
   font-size: 2.5rem;
   margin-bottom: 2rem;
 }
@@ -125,54 +134,61 @@ body {
 }
 .about__content .item p {
   text-align: justify;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 .about__content .item button {
   font-size: 1.3rem;
   padding: 5px 25px;
+  font-family: var(--barbi);
   color: white;
-  transition: 0.5s linear;
+  transition: all 0.5s linear;
   background-color: #fe5b29;
+  border: 0;
+  outline: 0;
 }
 .about__content .item button:hover {
-  background-color: #2b2b22;
+  background-color: #2b2b2b;
 }
 
 .filter {
   width: 100%;
   padding: 2rem 0;
-  background-color: #2b2b22;
+  background-color: #2b2b2b;
 }
 .filter .title h2 {
-  color: white;
+  color: #fff;
   font-size: 2.3rem;
+  font-family: var(--lora);
 }
 .filter .title p {
-  color: white;
+  color: #fff;
   margin-bottom: 2rem;
-  opacity: 0.7;
 }
 
-.filter__contact {
+.filter__content {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
   align-items: center;
 }
-.filter__contact .item select {
-  width: 100%;
+.filter__content .item select {
+  width: 80%;
   height: 6vh;
   font-size: 1.3rem;
+  transition: all 0.5s linear;
 }
-.filter__contact .item button {
+.filter__content .item button {
   font-size: 1.3rem;
   padding: 5px 25px;
+  font-family: var(--barbi);
   color: white;
-  transition: 0.5s linear;
+  transition: all 0.5s linear;
   background-color: #fe5b29;
+  border: 0;
+  outline: 0;
 }
-.filter__contact .item button:hover {
-  background-color: black;
+.filter__content .item button:hover {
+  background-color: #2b2b2b;
 }
 
 .offers {
@@ -186,6 +202,7 @@ body {
 .offers .title h2 {
   text-align: center;
   font-size: 2.2rem;
+  font-family: var(--inter);
 }
 
 .offers__content {
@@ -197,59 +214,66 @@ body {
 .offers__content .item {
   padding: 1rem 1rem;
   box-shadow: 0 0 20px grey;
-  transition: all 0.2s linear;
+  transition: all 0.4s linear;
   text-align: center;
 }
-.offers__content .item:hover {
-  box-shadow: 0 0 0px rgb(0, 0, 0), 0 0 1px rgb(255, 255, 255);
-}
 .offers__content .item .img {
-  height: 23vh;
+  height: 28vh;
 }
 .offers__content .item h2 {
+  font-family: var(--playfair);
   margin-bottom: 0.5rem;
 }
 .offers__content .item p {
   margin-bottom: 0.5rem;
   color: #fe5b29;
-  font-weight: bold;
+  font-family: var(--roboto);
+  font-weight: 900;
 }
 .offers__content .item button {
   font-size: 1.3rem;
   padding: 5px 25px;
+  font-family: var(--barbi);
   color: white;
-  transition: 0.5s linear;
+  transition: all 0.5s linear;
   background-color: #fe5b29;
+  border: 0;
+  outline: 0;
 }
 .offers__content .item button:hover {
-  background-color: black;
+  background-color: #2b2b2b;
+}
+.offers__content .item:hover {
+  box-shadow: 0 0 0px black, 0 0 0px black, 0 0 0px black, 0 0 1px white;
 }
 
 .choose {
   width: 100%;
   padding: 2rem 0;
-  background-color: #2b2b22;
+  background-color: #2b2b2b;
 }
 .choose .title {
   margin-bottom: 3rem;
 }
 .choose .title h2 {
   font-size: 2.3rem;
-  color: white;
+  color: #fff;
+  font-family: var(--lora);
 }
-.choose .choose__contact {
+
+.choose__content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
   align-items: center;
 }
-.choose .choose__contact .item .img {
-  width: 20%;
+.choose__content .item .img {
+  width: 10%;
   margin-bottom: 1rem;
 }
-.choose .choose__contact .item h2, .choose .choose__contact .item p {
-  color: white;
-  width: 90%;
+.choose__content .item h2,
+.choose__content .item p {
+  color: #fff;
 }
 
 .costumer {
@@ -263,167 +287,208 @@ body {
 .costumer .title h2 {
   text-align: center;
   font-size: 2.2rem;
-}
-.costumer .swiper-button-prev, .costumer .swiper-button-next {
-  background-color: #fe5b29;
-  color: white;
-  padding: 25px 25px;
-  font-size: 1.2rem;
+  font-family: var(--inter);
 }
 
-.costuer__contact {
+.costumer__content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
   align-items: center;
+  width: 60%;
   margin: 0 auto;
-  width: 80%;
 }
-.costuer__contact .item .card {
-  border: 1px solid rgb(255, 255, 255);
+.costumer__content .item .card {
+  border: 1px solid white;
   box-shadow: 0 0 20px grey;
   text-align: center;
-  width: 85%;
-  margin: 0 auto;
+  padding: 1rem 1rem;
 }
-.costuer__contact .item .card p {
-  width: 64%;
+.costumer__content .item .card p {
   margin: 0 auto;
-  padding-bottom: 2rem;
+  width: 80%;
+  margin-bottom: 2rem;
 }
-.costuer__contact .item .card .img {
-  width: 35%;
+.costumer__content .item .card .img {
+  width: 40%;
   margin: 0 auto;
-  margin-top: -40px;
+  margin-top: -50px;
+  margin-bottom: 1rem;
 }
-.costuer__contact .item .img {
-  width: 5%;
+.costumer__content .item .img {
+  width: 8%;
   margin: 0 auto;
-  margin-top: 3rem;
+  margin-top: 5rem;
 }
 
 .contact {
   width: 100%;
-  padding-top: 3rem;
+  padding-top: 2rem;
+}
+.contact .title {
+  margin-bottom: 2rem;
 }
 .contact .title h2 {
   text-align: center;
   font-size: 2.2rem;
+  font-family: var(--inter);
 }
 
 .contact__content {
   background-color: #fe5b29;
-  padding-bottom: 2rem;
   padding-top: 10rem;
+  padding-bottom: 2rem;
   border-radius: 50% 50% 100% 0%/100% 100% 0% 0%;
 }
 .contact__content form {
-  width: 60%;
   display: flex;
   flex-direction: column;
+  width: 60%;
   margin: 0 auto;
   gap: 1rem;
 }
 .contact__content form input {
   height: 7vh;
   font-size: 1.2rem;
+  font-family: var(--monster);
   text-align: center;
   border: 0;
   outline: 0;
-  border-radius: 7px;
 }
 .contact__content form textarea {
   padding-top: 1rem;
   height: 12vh;
   font-size: 1.2rem;
+  font-family: var(--monster);
   text-align: center;
   border: 0;
   outline: 0;
-  border-radius: 7px;
 }
 .contact__content form button {
   font-size: 1.3rem;
   padding: 5px 25px;
+  font-family: var(--barbi);
   color: white;
-  transition: 0.5s linear;
-  background-color: red;
+  transition: all 0.5s linear;
+  background-color: rgb(233, 16, 16);
   border: 0;
-  width: 20%;
+  outline: 0;
+  width: 120px;
   margin: 0 auto;
 }
 .contact__content form button:hover {
   background-color: white;
 }
 .contact__content form button:hover {
-  color: black;
+  color: #000;
 }
 
 .footer {
   width: 100%;
   padding: 2rem 0;
-  background-color: #2b2b22;
+  background-color: #2b2b2b;
 }
 .footer .title {
-  text-align: center;
-  font-size: 2.2rem;
-  padding-bottom: 1.2rem;
+  margin-bottom: 2rem;
 }
-.footer .footer__contact {
+.footer .title img {
+  width: 10%;
+  margin: 0 auto;
+}
+.footer p {
+  margin-top: 2rem;
+  color: #fff;
+  text-align: center;
+  font-family: var(--lora);
+}
+
+.footer__content {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 2rem;
-  align-items: center;
-  color: white;
+  align-items: flex-start;
 }
-.footer .footer__contact h2 {
-  font-size: 1.8rem;
+.footer__content h2,
+.footer__content p {
+  color: #fff;
   margin-bottom: 1rem;
+  text-align: left;
+  font-family: var(--inter);
 }
-.footer .footer__contact h2:first-of-type {
-  margin-top: 0.2rem;
-}
-.footer .footer__contact a {
-  display: block;
-  color: white;
-  margin-top: 10px;
-}
-.footer .footer__contact i {
-  border-radius: 100%;
-  padding: 11px 11px;
-  color: black;
-  margin-top: 1rem;
-  margin-left: 0.6rem;
-  background-color: white;
-  transition: all 0.3s linear;
-}
-.footer .footer__contact i:hover {
+.footer__content h2::-moz-selection {
   background-color: red;
+  color: green;
 }
-.footer .footer__contact textarea {
-  background: 0;
+.footer__content h2::selection {
+  background-color: red;
+  color: green;
+}
+.footer__content .item textarea {
+  padding-top: 1rem;
+  height: 8vh;
+  font-size: 1.2rem;
+  font-family: var(--monster);
   border: 0;
   outline: 0;
-  font-size: 1.1rem;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid white;
+  background-color: #2b2b2b;
 }
-.footer .footer__contact button {
+.footer__content .item button {
   font-size: 1.3rem;
   padding: 5px 25px;
+  font-family: var(--barbi);
   color: white;
-  transition: 0.5s linear;
-  background-color: red;
+  transition: all 0.5s linear;
+  background-color: #fe5b29;
+  border: 0;
+  outline: 0;
 }
-.footer .footer__contact button:hover {
+.footer__content .item button:hover {
   background-color: white;
 }
-.footer .footer__contact button:hover {
-  color: black;
+.footer__content .item button:hover {
+  color: #000;
+}
+.footer__content .item a {
+  display: block;
+  color: #fff;
+  transition: all 0.5s linear;
+}
+.footer__content .item a i {
+  margin-right: 10px;
+}
+.footer__content .item a:hover {
+  color: #cc03fe;
+}
+.footer__content .item .social {
+  display: flex;
+  margin-top: 1rem;
+  justify-content: space-between;
+  font-size: 1.5rem;
+  text-align: center;
+}
+.footer__content .item .social i {
+  background-color: #fff;
+  border-radius: 100%;
+  color: #000;
+  padding: 10px 14px;
+  transition: all 0.5s linear;
+}
+.footer__content .item .social i:hover {
+  background-color: #fe5b29;
+  color: #fff;
 }
 
-.copyright {
-  background-color: #2b2b22;
-  text-align: center;
-  font-size: 1.1rem;
-  color: white;
-  padding-bottom: 1rem;
+.navigation .navbar .fa-bars {
+  color: #fff;
+  font-size: 1.5rem;
+  display: none;
+}
+
+.short {
+  height: 7vh;
+}
+
+.long {
+  height: 100%;
 }/*# sourceMappingURL=style.css.map */
